# libcurve

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Findlibsodium.cmake  Makefile.am  NEWS  README.md  README.txt  ci_build.sh  ci_deploy.sh  configure.ac  license.xml  mkdoc  project.xml  version.sh
builds/android/: Android.mk
builds/check_zproject/: ci_build.sh
builds/cmake/: ci_build.sh
builds/mingw32/: Makefile.mingw32
builds/msvc/: Makefile  Makefile.in
builds/msvc/vs2008/curve/: curve.vcproj
builds/msvc/vs2010/curve/: curve.vcxproj
builds/msvc/vs2010/curve_selftest/: curve_selftest.vcxproj
builds/msvc/vs2012/curve/: curve.vcxproj
builds/msvc/vs2012/curve_selftest/: curve_selftest.vcxproj
builds/msvc/vs2013/curve/: curve.vcxproj  curve.vcxproj.filters
builds/msvc/vs2013/curve_selftest/: curve_selftest.vcxproj
builds/qt-android/: build.sh  ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  clab.txt  curve.txt  curve_client.doc  curve_client.txt  curve_codec.doc  curve_codec.txt  curve_keypair.txt  curve_keystore.txt  curve_server.doc  curve_server.txt  curve_z85.doc  curve_z85.txt  curvezmq.txt  curvezmq_codec.txt  curvezmq_keypair.txt  libcurve.txt  libcurve_codec.txt  libcurve_keypair.txt
include/: clab.h  curve.h  curve_client.h  curve_codec.h  curve_keypair.h  curve_keystore.h  curve_library.h  curve_server.h  curve_z85.h  curvezmq_codec.h  curvezmq_keypair.h  libcurve.h  libcurve_codec.h  libcurve_keypair.h
src/: .gitignore  Makefile.am  Makemodule.am  cl_curve.c  curve_classes.h  curve_client.c  curve_codec.c  curve_keypair.c  curve_keystore.c  curve_private_selftest.c  curve_selftest.c  curve_server.c  curve_z85.c  curvezmq_codec.c  curvezmq_keypair.c  curvezmq_selftest.c  libcurve.pc.in  libcurve_codec.c  libcurve_keypair.c  libcurve_selftest.c  libcurvezmq.pc.in  selftest  test_keystore
tools/: Makefile.am  curve_keygen.c
